--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,6 +16,6 @@ metadata:
       spec:
         containers:
         - name: react-app
-          image: bravinwasike/react-app:latest
+          image: jagkush/react-app:latest
           ports:
           - containerPort: 3000
